refactor tests for batchs